[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5"
]

[project]
authors = [{name = "Adriano Dijan", email = "adriano.dijan1@gmail.com"}]
dependencies = [
  "envparse>=0.2.0",
  "furo>=2024.8.6",
  "requests>=2.32.3",
  "rich>=14.0.0",
  "sphinx>=8.2.3",
  "sphinx-autodoc-typehints>=3.1.0",
  "sphinx-markdown-builder>=0.6.8",
  "structlog>=25.2.0",
  "structlog-pretty>=0.4.3"
]
description = "Tool to autoupdate the JumpCloud Radius public IP."
name = "jumpradius-updater"
requires-python = "~=3.13"
version = "0.1.4"

[tool.black]
line_length = 79

[tool.hatch.build.targets.wheel]
packages = ["jumpradius-updater"]

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
